# system-monitor

./: README.md  pyproject.toml
src/system_monitor/: __init__.py  cpumonitor.py  display.py
