[project]
name = "system-monitor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "tmoson", email = "tyler.p.moson@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "blessed>=1.39.0",
    "psutil>=7.2.2",
]

[project.scripts]
system-monitor = "system_monitor:main"

[build-system]
requires = ["uv_build>=0.9.25,<0.10.0"]
build-backend = "uv_build"
